# schedule-solver

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  fly.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202604290001_initial_schema.py  202604300001_room_types.py  202604300002_room_md_only.py  202604300003_provider_center_credentials.py  202604300004_provider_room_type_skills.py  202604300005_provider_assignment_draft_eligibility.py  202604300006_schedule_version_metadata.py  202604300007_nullable_assignment_provider.py  202605020001_provider_schedule_week_availability.py  202605020002_store_weekly_availability_options_as_json.py  202605020003_weekly_availability_shift_requests.py  202605020004_normalize_weekly_availability_shift_requests.py  202605020005_assignment_shift_type.py
apps/api/app/: dependencies.py  main.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/models/: __init__.py  scheduling.py
apps/api/app/routers/: centers.py  health.py  provider_availability.py  providers.py  rooms.py  schedules.py
apps/api/app/schemas/: center.py  common.py  placeholders.py  provider.py  provider_availability_week.py  room.py  schedule.py
apps/api/app/services/scheduling/: provider_eligibility.py  provider_eligibility_contracts.py  solver.py  solver_contracts.py  solver_service.py  (+2 more)
apps/api/tests/: test_patch_nullable_fields.py  test_provider_eligibility.py  test_provider_weekly_availability_schema.py  test_schedule_routes.py  test_solver.py
(+50 files in other folders)
