[project]
name = "schedule-solver-api"
version = "0.1.0"
description = "FastAPI backend for surgery center scheduling."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "fastapi>=0.115.0",
  "pydantic[email]>=2.9.2",
  "pydantic-settings>=2.5.2",
  "psycopg[binary]>=3.2.3",
  "python-dotenv>=1.0.1",
  "redis>=5.1.1",
  "rq>=2.0.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[dependency-groups]
dev = []
